compiler/actonc/test/syntaxerrors/err23.act
# Invalid f-string syntax
def bad_fstring():
    name = "world"
    return f"Hello {name"